// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConvertedAmount renders an amount with conversion icon and tooltip 1`] = `
<div>
  <div
    class="converted-amount"
  >
    <span
      class="conversion-indicator"
      data-testid="conversion-indicator"
    >
      <svg
        class="gridicon gridicons-sync"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
          />
        </g>
      </svg>
    </span>
    $1.00 USD
  </div>
</div>
`;

exports[`ConvertedAmount renders an amount with conversion icon and tooltip 2`] = `
<div>
  <div
    class="converted-amount"
  >
    <span
      class="conversion-indicator"
      data-testid="conversion-indicator"
    >
      <svg
        class="gridicon gridicons-sync"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
          />
        </g>
      </svg>
      <span>
        <div>
          <div
            aria-hidden="true"
            class="components-popover components-tooltip is-without-arrow"
            data-x-axis="center"
            data-y-axis="bottom"
            style="top: 0px; left: 0px;"
          >
            <div
              class="components-popover__content"
              tabindex="-1"
            >
              <div
                style="position: relative;"
              >
                <iframe
                  aria-hidden="true"
                  frameborder="0"
                  src="about:blank"
                  style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
                  tabindex="-1"
                />
                Converted from MOK 2.00
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
    $1.00 USD
  </div>
</div>
`;

exports[`ConvertedAmount renders an amount without conversion 1`] = `
<div>
  $1.00 USD
</div>
`;
